--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -1889,7 +1889,7 @@
   result: apply_loss_reduction(soft_margin_loss_backward(self_t.conj(), self_p, target, at::Reduction::None).conj(), reduction)
 
 - name: relu(Tensor self) -> Tensor
-  self: threshold_backward(grad, result, 0)
+  self: threshold_backward(grad, self, 0)
   result: auto_element_wise
 
 - name: silu(Tensor self) -> Tensor
